# orange_pi_monitoring

./: .gitignore  Cargo.toml  justfile
.cargo/: config.toml
common/: Cargo.toml  build.rs
common/proto/: monitor.proto
common/src/: lib.rs
monitoring_service/: Cargo.toml
monitoring_service/src/: collect_info.rs  cpu_service.rs  main.rs
viewer/: Cargo.toml  Trunk.toml  index.html  package-lock.json
viewer/src/: average_plot.rs  bar.rs  bytesize.rs  client.rs  lib.rs  model.rs  view.rs
viewer/static/css/: app.css  bar.css
viewer/static/sass/: index.sass
