[package]
name = "monitoring_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tonic = "0.9.2"
common = { path = "../common" }
fslock = "0.2.1"
sysinfo = "0.29.2"
tower-http = { version = "0.4.0", features = ["cors"] }
tonic-web = "0.9.2"
