[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
futures = "0.3.28"
prokio = "0.1.0"
tonic = { default-features = false, features = [], version = "0.9.2" }
tonic-web-wasm-client = "0.4.0"
smallvec = { version = "1.10.0", features = ["const_generics"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-plotly = "0.2.0"
web-sys = "0.3.63"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
