[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
futures = { version = "0.3.28", default-features = false, features = ["std", "async-await"] }
prokio = "0.1.0"
ybc = "0.4.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-plotly = "0.2.0"
ordered-float = "3.7.0"
serde = "1.0.164"
gloo = "0.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
tonic = { default-features = false, features = [], version = "0.9.2" }
tonic-web-wasm-client = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { default-features = false, features = ["transport"], version = "0.9.2" }
tokio = { version = "1.21.1", features = ["rt", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
float-cmp = "0.9.0"
